# clearmap

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  clearmap-acknowledgments.example.json  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json  plugin.json
.codex-plugin/: plugin.json
.github/: install-engines.sh
.github/workflows/: ci.yml
agent-adapters/claude/: companion-mode.md  plan-mode.md
commands/: audit.md  develop.md  exclusions.md  issues.md  plan.md  report.md  setup.md
docs/: advanced.md  auditing.md  claude-code.md  codex.md  first-run.md  normal-development.md  other-agents.md  standalone-cli.md
evals/: README.md
evals/graders/: development.md
examples/: build_manifest.py
hooks/: hooks.json  session_start.py
references/: audit-checks.md  clinical-checks.md  reasoning-schema.json  regulatory-baseline.json  regulatory-map.md  scoring-methodology.md  taxonomy.json
rules/: access.yaml  appsec.yaml  gitleaks.toml  session.yaml  tracking.yaml  transit.yaml
scripts/: __init__.py  _version.py  acknowledgments.py  audit.py  calibrate.py  cli.py  config.py  doctor.py  export.py  filters.py  init.py  install_agent_skills.py  issues.py  merge_reasoning.py  plugin_root.py  presidio_check.py  providers.py  reason.py  redact.py  report.py  report_html.py  scan.py  scoring.py  setup.py  suppressions.py  taxonomy.py
tests/: test_access_rules.py  test_acknowledgments.py  test_appsec_rules.py  test_audit.py  test_calibrate.py  test_config.py  test_diff_scan.py  test_export.py  test_filters.py  test_gitleaks_rules.py  test_init.py  test_install_agent_skills.py  test_issues.py  test_merge_dedupe.py  test_merge_validation.py  test_phi_leak_e2e.py  test_plugin_root.py  test_presidio_optional.py  test_providers.py  test_reason.py  test_redact.py  test_report.py  test_report_formats.py  test_scan_failclosed.py  test_score_states.py  test_skills.py  test_suppressions.py  test_taxonomy.py  test_vendored_exclusion.py  test_version.py
(+62 files in other folders)
